removed testing page code as index appears to be working without any major issues on mobile now

--- a/css/styleTest.css
+++ b/css/styleTest.css
@@ -6,92 +6,7 @@
     width: 100%;
 }
 
-.row {
-
-    margin: 0!important;
-}
-
-.indexBody {
-
-    padding-bottom: 1%;
-    min-height: 200px;
-    width: 100%;
-}
-
-.hrStyleTitle {
-
-    width: 25%;
-}
-
-.websiteTitle {
-
-    font-size: 30px;
-    text-align: center;
-}
-
-.indexContentDescription {
-
-    text-align: center;
-    font-size: 18px;
-    font-weight: 300;
-}
-
-.indexEnsembleButton {
-
-    padding-top: 1%;
-    padding-bottom: 1%;
-}
-
-.calendarWeek {
-
-    width: 100%;
-    height: 220px;
-}
-
-.hrStyle {
-
-    width: 80%;
-}
-
-.instagram-media {
-
-    min-width: 0px!important;
-    width: 100%;
-}
 
 @media only screen and (max-width: 600px){
 
-    /*---------------------- MAIN -----------------------*/
-
-    .indexBody {
-
-        padding-bottom: 2%;
-        min-height: 100px;
-    }
-
-    .joinEnsemblesLeft {
-
-        padding: 0;
-    }
-
-    .joinEnsemblesRight {
-
-        padding: 0;
-    }
-
-    .websiteTitle {
-
-        font-size: 20px;
-    }
-    
-    .indexContentDescription {
-
-        font-size: 15px;
-    }
-
-    .instagram-media {
-
-        min-width: none!important;
-        width: 100%;
-    }
 }
